// Copyright 2012 Viewfinder. All rights reserved.
// Author: Peter Mattis.
syntax = "proto2";
option java_package = "co.viewfinder.proto";
option java_outer_classname = "QueueMetadataPB";

message QueueMetadata {
  optional int32 priority = 1;
  optional int64 sequence = 2;
}
